--- a/Assignment1/7374 Assignment1 Part1.ipynb
+++ b/Assignment1/7374 Assignment1 Part1.ipynb
@@ -1315,11 +1315,12 @@
     "\n",
     "**• Comment on how good your model is ? Does it overfit/underfit data ? What could you do to improve the model?**\n",
     "\n",
-    "My model fits data well but it can be still improved. Because the testing accuracy is about 0.76 and the loss is 0.76. These two parametes are very close to training results. My model underfits data because the loss of model is still a high value and can be decresed.\n",
+    "My best model fits data well but it can be still improved. Because the testing accuracy is about 0.76 and the loss is 0.76. These two parameters are very close to training results. My model underfits data because the loss of model is still a high value and can be decreased.\n",
     "\n",
     "I think I can improve my model by doing follows:\n",
-    "1. Add more features. If the under-fitting is due to insufficient features, I can add more feature parametes.\n",
-    "2. Increase model complexity. If the model is too simple to handle complex tasks. More complexity can be used to reduce the regularization coefficients. For example, I can train model with more epochs, or more layers."
+    "1. Add more features. If the under-fitting is due to insufficient features, I can add more feature parameters.\n",
+    "2. Increase model complexity. If the model is too simple to handle complex tasks. More complexity can be used to reduce the regularization coefficients. \n",
+    "3. I can test more parameters and analyze how each parameter influence the result. For example, I can train model with more epochs, or more layers."
    ]
   }
  ],
