--- a/Assignment2/CNN Best Model.ipynb
+++ b/Assignment2/CNN Best Model.ipynb
@@ -861,7 +861,7 @@
    "outputs": [],
    "source": [
     "save_dir = os.path.join(os.getcwd(), 'saved_models')\n",
-    "model_name = 'keras_cifar10_trained_model.h5'"
+    "model_name = 'keras_CNN_trained_model.h5'"
    ]
   },
   {
